--- a/_data/toc/graphql.yml
+++ b/_data/toc/graphql.yml
@@ -138,6 +138,9 @@ pages:
                 - label: updateCartItems mutation
                   url: /graphql/reference/quote-update-cart-items.html
 
+            - label: redeemGiftCardBalanceAsStoreCredit mutation
+              url: /graphql/reference/redeem-giftcard-balance.html
+
             - label: Sales endpoint
               url: /graphql/reference/sales.html
 
