Adding a new documentation related to ArrayManager (#4682)
* Adding a new documentation related to ArrayManager

* Small adjustments

* Adjusting the symlinks

* Applying the suggested changes

--- a/_data/toc/php-developer-guide.yml
+++ b/_data/toc/php-developer-guide.yml
@@ -258,10 +258,13 @@ pages:
           url: /extension-dev-guide/configuration/importers.html
 
     - label: Framework
-      include_versions: ["2.2", "2.3"]
       children:
         - label: Serialize Library
+          include_versions: ["2.2", "2.3"]
           url: /extension-dev-guide/framework/serializer.html
+
+        - label: Array Manager
+          url: /extension-dev-guide/framework/array-manager.html
 
     - label: Security
       children:
