--- a/_data/toc/graphql.yml
+++ b/_data/toc/graphql.yml
@@ -105,7 +105,7 @@ pages:
                 - label: createEmptyCart mutation
                   url: /graphql/reference/quote-create-cart.html
 
-                - label: giftCardAccount endpoint
+                - label: giftCardAccount query
                   url: /graphql/reference/quote-giftcard-account.html
 
                 - label: placeOrder mutation
