updated nav files

--- a/_data/toc/release-notes.yml
+++ b/_data/toc/release-notes.yml
@@ -94,6 +94,9 @@ pages:
         - label: Magento Open Source 2.1.x Release Notes
           children:
 
+            - label: Magento Open Source 2.1.18 Release Notes
+              url: /release-notes/ReleaseNotes2.1.18CE.html
+
             - label: Magento Open Source 2.1.17 Release Notes
               url: /release-notes/ReleaseNotes2.1.17CE.html
 
@@ -150,6 +153,9 @@ pages:
 
         - label: Magento Commerce 2.1.x Release Notes
           children:
+
+            - label: Magento Commerce 2.1.18 Release Notes
+              url: /release-notes/ReleaseNotes2.1.18EE.html
 
             - label: Magento Commerce 2.1.17 Release Notes
               url: /release-notes/ReleaseNotes2.1.17EE.html
