--- a/_data/toc/graphql.yml
+++ b/_data/toc/graphql.yml
@@ -102,14 +102,23 @@ pages:
                 - label: applyCouponToCart mutation
                   url: /graphql/reference/quote-apply-coupon.html
 
+                - label: applyGiftCardToCart mutation
+                  url: /graphql/reference/quote-apply-giftcard.html
+
                 - label: createEmptyCart mutation
                   url: /graphql/reference/quote-create-cart.html
+
+                - label: giftCardAccount query
+                  url: /graphql/reference/quote-giftcard-account.html
 
                 - label: placeOrder mutation
                   url: /graphql/reference/quote-place-order.html
 
                 - label: removeCouponFromCart mutation
                   url: /graphql/reference/quote-remove-coupon.html
+
+                - label: removeGiftCardFromCart mutation
+                  url: /graphql/reference/quote-remove-giftcard.html
 
                 - label: removeItemFromCart mutation
                   url: /graphql/reference/quote-remove-item.html
@@ -131,6 +140,9 @@ pages:
 
                 - label: updateCartItems mutation
                   url: /graphql/reference/quote-update-cart-items.html
+
+            - label: redeemGiftCardBalanceAsStoreCredit mutation
+              url: /graphql/reference/redeem-giftcard-balance.html
 
             - label: Sales endpoint
               url: /graphql/reference/sales.html
