Additional info about depends annotation

--- a/_data/toc/testing.yml
+++ b/_data/toc/testing.yml
@@ -13,6 +13,9 @@ pages:
           url: /test/integration/annotations.html
           children:
 
+          - label: '@depends'
+            url: /test/integration/annotations/depends.html
+
           - label: '@magentoAppArea'
             url: /test/integration/annotations/magento-app-area.html
 
