--- a/_data/compatibility.yml
+++ b/_data/compatibility.yml
@@ -43,7 +43,7 @@ extension:
           2.3.0: not supported
           2.3.1: general availability
   -
-    name: Multi Source Inventory
+    name: Magento Inventory
     versions:
       -
         name: 1.1.2
