--- a/_data/compatibility.yml
+++ b/_data/compatibility.yml
@@ -2,6 +2,7 @@ versions:
   - 2.2.4+
   - 2.3.0
   - 2.3.1
+  - 2.3.2
 extension:
   -
     name: Amazon Sales Channel
@@ -12,6 +13,7 @@ extension:
           2.2.4+: general availability
           2.3.0: general availability
           2.3.1: general availability
+          2.3.2: general availability
   -
     name: Google Shopping ads Channel
     versions:
@@ -21,12 +23,14 @@ extension:
           2.2.4+: general availability
           2.3.0: general availability
           2.3.1: general availability
+          2.3.2: general availability
       - 
         name: 1.1.1
         support:
           2.2.4+: general availability
           2.3.0: general availability
           2.3.1: general availability
+          2.3.2: general availability
   -
     name: Magento Shipping
     versions:
@@ -36,12 +40,14 @@ extension:
           2.2.4+: not supported
           2.3.0: general availability
           2.3.1: not supported
+          2.3.2: not supported
       -
         name: 1.5.1
         support:
           2.2.4+: not supported
           2.3.0: not supported
           2.3.1: general availability
+          2.3.2: not supported
   -
     name: Multi Source Inventory
     versions:
@@ -51,18 +57,21 @@ extension:
           2.2.4+: not supported
           2.3.0: general availability
           2.3.1: general availability
+          2.3.2: general availability
       -
         name: 1.1.0
         support:
           2.2.4+: not supported
           2.3.0: general availability
           2.3.1: general availability
+          2.3.2: general availability
       -
         name: 1.0.3
         support:
           2.2.4+: not supported
           2.3.0: general availability
           2.3.1: general availability
+          2.3.2: general availability
   -
     name: Page Builder
     versions:
@@ -72,3 +81,4 @@ extension:
           2.2.4+: not supported
           2.3.0: open beta
           2.3.1: general availability
+          2.3.2: general availability
