MAGECLOUD-3684 add functional testing

--- a/_data/toc/cloud-guide.yml
+++ b/_data/toc/cloud-guide.yml
@@ -108,6 +108,9 @@ pages:
         - label: Connect to the database
           url: /cloud/docker/docker-database.html
 
+        - label: Functional testing in Docker
+          url: /cloud/docker/docker-development-testing.html
+
         - label: Docker quick reference
           url: /cloud/docker/docker-quick-reference.html
 
