Graphql checkout tutorial (#4271)
* magento/devdocs#589: Add a tutorial for the checkout workflow

* magento/devdocs#589: Add a tutorial for the checkout workflow

* magento/devdocs#589: Add a tutorial for the checkout workflow

* magento/devdocs#589: Add a tutorial for the checkout workflow

* magento/devdocs#589: Add a tutorial for the checkout workflow

* magento/devdocs#589: Add a tutorial for the checkout workflow

* adding navigation

* Update graphql.yml

Removed unnecessary line

* magento/devdocs#589: Add a tutorial for the checkout workflow
1. Add info about coupon operations

* magento/devdocs#: GraphQl Checkout Tutorial
1. Fix remove coupon response

* magento/devdocs#: GraphQl Checkout Tutorial
1. Made corrections for setShippingMethodsOnCart regarding https://github.com/magento/graphql-ce/pull/609

* magento/devdocs#: GraphQl checkout tutorial

* magento/devdocs#: GraphQl checkout tutorial

* magento/devdocs#: GraphQl checkout tutorial. Updates for checkout-add-product-to-cart.md

* magento/devdocs#: GraphQl checkout tutorial. Updates for checkout-add-product-to-cart.md

* magento/devdocs#: GraphQl checkout tutorial. Updates for checkout-billing-address.md

* magento/devdocs#: GraphQl checkout tutorial. Updates for checkout-coupon.md

* magento/devdocs#: GraphQl checkout tutorial. Updates for checkout-customer.md

* magento/devdocs#: GraphQl checkout tutorial. Updates for checkout-payment-method.md

* magento/devdocs#: GraphQl checkout tutorial. Updates for checkout-place-order.md

* magento/devdocs#: GraphQl checkout tutorial. Updates for checkout-quote-email.md

* magento/devdocs#: GraphQl checkout tutorial. Updates for checkout-shipping-address.md

* magento/devdocs#: GraphQl checkout tutorial. Updates for checkout-shipping-method.md

* magento/devdocs#: GraphQl checkout tutorial. Updates for checkout-shopping-cart.md

* magento/devdocs#: GraphQl checkout tutorial. Updates for index.md

* magent

--- a/_data/toc/graphql.yml
+++ b/_data/toc/graphql.yml
@@ -49,7 +49,7 @@ pages:
       children:
             - label: CMS endpoint
               url: /graphql/reference/cms.html
-              
+
             - label: CustomAttributeMetadata endpoint
               url: /graphql/reference/custom-attribute-metadata.html
 
@@ -143,6 +143,10 @@ pages:
 
             - label: Wishlist endpoint
               url: /graphql/reference/wishlist.html
-              
+
+    - label: Tutorial
+      class: tutorial
+      url: /graphql/tutorials/checkout/index.html
+
     - label: Release Notes
       url: /graphql/release-notes.html
