--- a/_data/whats-new.yml
+++ b/_data/whats-new.yml
@@ -4,8 +4,98 @@ description: |
   We exclude from this list proofreading, spelling checks, and all minor updates.
 link: /whats-new.html
 thread: /whatsnew-feed.xml
-updated: Mon Jun 24 10:57:15 2019
+updated: Thu Jun 27 10:38:49 2019
 entries:
+- description: Added Commerce 2.3.2 to the [release information page](https://devdocs.magento.com/release/).
+  versions: 2.3.x
+  type: Major update
+  date: June 22, 2019
+  link: https://github.com/magento/devdocs/pull/4824
+- description: Updated the REST schema for [2.3.2](https://devdocs.magento.com/redoc/2.3/)
+    and [2.2.9](https://devdocs.magento.com/swagger/index_22.html).
+  versions: 2.2.9, 2.3.2
+  type: Major update
+  date: June 22, 2019
+  link: https://github.com/magento/devdocs/pull/4816
+- description: Added release notes for [Magento Commerce 2.1.1.8](https://devdocs.magento.com/guides/v2.1/release-notes/ReleaseNotes2.1.18EE.html).
+  versions: 2.1.18
+  type: New topic
+  date: June 22, 2019
+  link: https://github.com/magento/devdocs/pull/4773
+- description: GraphQL supports the [Vault endpoint](https://devdocs.magento.com/guides/v2.3/graphql/reference/vault.html),
+    which allows customers to store payment information with a service such as Braintree
+    Vault.
+  versions: 2.3.2
+  type: New topic
+  date: June 22, 2019
+  link: https://github.com/magento/devdocs/pull/4760
+- description: Updated the [GraphQL release notes](https://devdocs.magento.com/guides/v2.3/graphql/release-notes.html)
+    for 2.3.2.
+  versions: 2.3.2
+  type: Major update
+  date: June 22, 2019
+  link: https://github.com/magento/devdocs/pull/4725
+- description: Added release notes for [Magento Commerce](https://devdocs.magento.com/guides/v2.3/release-notes/ReleaseNotes2.3.2EE.html)
+    and [Magento Open Source](https://devdocs.magento.com/guides/v2.3/release-notes/ReleaseNotes2.3.2CE.html)
+    version 2.3.2.
+  versions: 2.3.2
+  type: New topic
+  date: June 22, 2019
+  link: https://github.com/magento/devdocs/pull/4722
+- description: Added release notes for [Magento Commerce](https://devdocs.magento.com/guides/v2.2/release-notes/ReleaseNotes2.2.9EE.html)
+    and [Magento Open Source](https://devdocs.magento.com/guides/v2.2/release-notes/ReleaseNotes2.2.9CE.html)
+    version 2.2.9.
+  versions: 2.2.9
+  type: New topic
+  date: June 22, 2019
+  link: https://github.com/magento/devdocs/pull/4721
+- description: Added Google reCAPTCHA installation information for Magento Open Source
+    and Commerce v[2.3.2](https://devdocs.magento.com/guides/v2.3/security/google-recaptcha.html),
+    [2.2.9](https://devdocs.magento.com/guides/v2.2/security/google-recaptcha.html),
+    and [2.1.18](https://devdocs.magento.com/guides/v2.1/security/google-recaptcha.html).
+  versions: 2.1.18, 2.2.9, 2.3.2
+  type: Technical changes
+  date: June 22, 2019
+  link: https://github.com/magento/devdocs/pull/4698
+- description: Added information about the [PoisonPill interface](https://devdocs.magento.com/guides/v2.3/extension-dev-guide/message-queues/refresh-config.html).
+  versions: 2.3.2
+  type: New topic
+  date: June 22, 2019
+  link: https://github.com/magento/devdocs/pull/4428
+- description: Added the `isEmailAvailable` query to the GraphQL [customer endpoint](https://devdocs.magento.com/guides/v2.3/graphql/reference/customer.html).
+  versions: 2.3.2
+  type: Major update
+  date: June 22, 2019
+  link: https://github.com/magento/devdocs/pull/4556
+- description: The [GraphQL quote endpoint](https://devdocs.magento.com/guides/v2.3/graphql/reference/quote.html)
+    adds numerous mutations for 2.3.2. Each mutation is documented separately. The
+    [GraphQL release notes](https://devdocs.magento.com/guides/v2.3/graphql/release-notes.html)
+    lists these new mutations.
+  versions: 2.3.2
+  type: New topic
+  date: June 22, 2019
+  link: https://github.com/magento/devdocs/pull/4502
+- description: Added a feature to configure the lock provider to prevent the launch
+    of duplicate cron jobs and cron groups. In previous releases, Magento used the
+    database to save locks. Now you have the option to manage locks using the database,
+    Zookeeper, or file locks. See [Configure the lock provider](https://devdocs.magento.com/guides/v2.3/install-gde/install/cli/install-cli-subcommands-lock.html).
+  versions: 2.2.9, 2.3.2
+  type: New topic
+  date: June 22, 2019
+  link: https://github.com/magento/devdocs/pull/4409
+- description: Added topics about [GraphQL caching](https://devdocs.magento.com/guides/v2.3/graphql/caching.html)
+    and [identity classes](https://devdocs.magento.com/guides/v2.3/graphql/develop/identity-class.html).
+  versions: 2.3.2
+  type: New topic
+  date: June 22, 2019
+  link: https://github.com/magento/devdocs/pull/4402
+- description: Added the `only_x_left_in_stock` and `stock_status` attributes to the
+    [Products endpoint](https://devdocs.magento.com/guides/v2.3/graphql/reference/products.html).
+    These attributes were added to support Inventory Management orders.
+  versions: 2.3.2
+  type: Technical changes
+  date: June 22, 2019
+  link: https://github.com/magento/devdocs/pull/4340
 - description: Completed the reference list and added a 'Code sample' section to the
     [Prompt Widget](https://devdocs.magento.com/guides/v2.3/javascript-dev-guide/widgets/widget_prompt.html)
     topic.
