--- a/_data/compatibility.yml
+++ b/_data/compatibility.yml
@@ -18,13 +18,19 @@ extension:
     name: Google Shopping ads Channel
     versions:
       -
+        name: 2.0.1
+        support:
+          2.2.4+: general availability
+          2.3.0: general availability
+          2.3.1: general availability
+          2.3.2: general availability
+      -
         name: 2.0.0
         support:
           2.2.4+: general availability
           2.3.0: general availability
           2.3.1: general availability
           2.3.2: general availability
-      
       -
         name: 1.1.2
         support:
