--- a/_data/toc/ui-components-guide.yml
+++ b/_data/toc/ui-components-guide.yml
@@ -25,6 +25,9 @@ pages:
         - label: Checkboxset component
           url: /ui_comp_guide/components/ui-checkboxset.html
 
+        - label: ColorPicker component
+          url: /ui_comp_guide/components/ui-colorpicker.html
+
         - label: Column component
           url: /ui_comp_guide/components/ui-column.html
 
