--- a/_data/toc/php-developer-guide.yml
+++ b/_data/toc/php-developer-guide.yml
@@ -207,6 +207,9 @@ pages:
             - label: Message queues overview
               url: /extension-dev-guide/message-queues/message-queues.html
 
+            - label: Message queues and stores
+              url: /extension-dev-guide/message-queues/message-queues-stores.html
+
             - label: Configure message Queues
               url: /extension-dev-guide/message-queues/config-mq.html
 
