What's New digest

--- a/_data/whats-new.yml
+++ b/_data/whats-new.yml
@@ -4,8 +4,44 @@ description: |
   We exclude from this list proofreading, spelling checks, and all minor updates.
 link: /whats-new.html
 thread: /whatsnew-feed.xml
-updated: Thu Jun 27 16:05:11 2019
+updated: Mon Jul 8 10:58:42 2019
 entries:
+- description: Added the 'Product view page available containers' section to [Product
+    Layouts](https://devdocs.magento.com/guides/v2.3/frontend-dev-guide/layouts/product-layouts.html).
+  versions: 2.1.x, 2.2.x, 2.3.x
+  type: Major update
+  date: July 8, 2019
+  link: https://github.com/magento/devdocs/pull/4630
+- description: Clarified the Functional testing for Docker is for ece-tools and not
+    for the Magento application.
+  versions: 2.x
+  type: Technical changes
+  date: June 29, 2019
+  link: https://github.com/magento/devdocs/pull/4874
+- description: Release Notes for the Google Shopping ads Channel extension have been
+    updated to include version 2.0.0. The Upcoming Releases page has also been updated.
+  versions: 2.0 Google Shopping ads
+  type: Major update
+  date: June 28, 2019
+  link: https://github.com/magento/devdocs/pull/4850
+- description: "- Documented the `{all}` route template option for the `routes.yaml`
+    which simplifies route configuration for Magento Commerce Pro and Starter projects
+    with multiple domains. See [Configure routes](https://devdocs.magento.com/guides/v2.3/cloud/project/project-conf-files_routes.html).<br/>-
+    Updated the route configuration documentation to indicate that customers can update
+    route configuration using the `routes.yaml` file on Pro Integration, Staging,
+    and Production environments. Previously, customers had to submit a support ticket
+    to update route configuration on Pro Staging and Production environments."
+  versions: 2.1.x, 2.2.x
+  type: Major update
+  date: June 28, 2019
+  link: https://github.com/magento/devdocs/pull/4795
+- description: Added a [new way of the CLI upgrade ](https://devdocs.magento.com/guides/v2.3/comp-mgr/cli/upgrade-with-plugin.html)(yet
+    experimental) that suggests using the Magento composer root plugin to resolve
+    conflicts in dependencies during the upgrade.
+  versions: 2.3.x
+  type: New topic
+  date: June 28, 2019
+  link: https://github.com/magento/devdocs/pull/4679
 - description: Updated the [Module Reference Guide](https://devdocs.magento.com/guides/v2.3/mrg/intro.html).
   versions: 2.3.2
   type: Major update
