--- a/Docfile.yml
+++ b/Docfile.yml
@@ -1,5 +1,10 @@
 content_map:
 -
+  directory: guides/v2.1
+  repository: magento/devdocs
+  branch: 2.1
+  filter: false
+-
   directory: guides/m1x
   repository: magento/devdocs-m1
   branch: master
