--- a/_data/compatibility.yml
+++ b/_data/compatibility.yml
@@ -18,6 +18,13 @@ extension:
     name: Google Shopping ads Channel
     versions:
       -
+        name: 3.0.0
+        support:
+          2.2.4+: general availability
+          2.3.0: general availability
+          2.3.1: general availability
+          2.3.2: general availability
+      -
         name: 2.0.2
         support:
           2.2.4+: general availability
