What's New update

--- a/_data/whats-new.yml
+++ b/_data/whats-new.yml
@@ -4,8 +4,44 @@ description: |
   We exclude from this list proofreading, spelling checks, and all minor updates.
 link: /whats-new.html
 thread: /whatsnew-feed.xml
-updated: Mon Jul 8 13:39:43 2019
+updated: Mon Jul 15 16:39:29 2019
 entries:
+- description: Added the 'Elements' and 'Data Entities' sections to the [Functional
+    Testing](https://devdocs.magento.com/guides/v2.3/coding-standards/technical-guidelines.html#113-functional-testing)
+    section of Technical Guidelines.
+  versions: 2.2.x, 2.3.x
+  type: Major update
+  date: July 15, 2019
+  link: https://github.com/magento/devdocs/pull/4869
+- description: Partner Atwix added a [new topic](https://devdocs.magento.com/guides/v2.3/javascript-dev-guide/widgets/widget_toggle.html)
+    describing the `ToggleAdvanced` widget.
+  versions: 2.1.x, 2.2.x, 2.3.x
+  type: New topic
+  date: July 12, 2019
+  link: https://github.com/magento/devdocs/pull/4780
+- description: Updated the [Google Shopping ads Install documentation](https://devdocs.magento.com/extensions/google-shopping-ads/)
+    and [Release Notes](https://devdocs.magento.com/extensions/google-shopping-ads/release-notes/)
+    for version 3.0.
+  versions: 2.0 Google Shopping ads
+  type: Major update
+  date: July 10, 2019
+  link: https://github.com/magento/devdocs/pull/4849
+- description: Added information and example about how to use the [ColorPicker component](https://devdocs.magento.com/guides/v2.3/ui_comp_guide/components/ui-colorpicker.html).
+  versions: 2.3.x
+  type: New topic
+  date: July 9, 2019
+  link: https://github.com/magento/devdocs/pull/4885
+- description: Added a 'Code sample' section to [Calendar Widget](https://devdocs.magento.com/guides/v2.3/javascript-dev-guide/widgets/widget_calendar.html).
+  versions: 2.2.x, 2.3.x
+  type: Major update
+  date: July 9, 2019
+  link: https://github.com/magento/devdocs/pull/4851
+- description: Added information and example about how to use the [ColorPicker component](https://devdocs.magento.com/guides/v2.3/ui_comp_guide/components/ui-colorpicker.html).
+  versions: 2.3.x
+  type: New topic
+  date: July 9, 2019
+  link: https://github.com/magento/devdocs/pull/4885
+
 - description: Added the 'Product view page available containers' section to [Product
     Layouts](https://devdocs.magento.com/guides/v2.3/frontend-dev-guide/layouts/product-layouts.html).
   versions: 2.1.x, 2.2.x, 2.3.x
