--- a/_data/whats-new.yml
+++ b/_data/whats-new.yml
@@ -31,17 +31,11 @@ entries:
   type: New topic
   date: July 9, 2019
   link: https://github.com/magento/devdocs/pull/4885
-- description: Added a 'Code sample' section to [Calendar Widget](https://devdocs.magento.com/guides/v2.3/javascript-dev-guide/widgets/widget_calendar.html).
+- description: Added a `Code sample` section to [Calendar Widget](https://devdocs.magento.com/guides/v2.3/javascript-dev-guide/widgets/widget_calendar.html).
   versions: 2.2.x, 2.3.x
   type: Major update
   date: July 9, 2019
   link: https://github.com/magento/devdocs/pull/4851
-- description: Added information and example about how to use the [ColorPicker component](https://devdocs.magento.com/guides/v2.3/ui_comp_guide/components/ui-colorpicker.html).
-  versions: 2.3.x
-  type: New topic
-  date: July 9, 2019
-  link: https://github.com/magento/devdocs/pull/4885
-
 - description: Added the 'Product view page available containers' section to [Product
     Layouts](https://devdocs.magento.com/guides/v2.3/frontend-dev-guide/layouts/product-layouts.html).
   versions: 2.1.x, 2.2.x, 2.3.x
