--- a/_data/toc/php-developer-guide.yml
+++ b/_data/toc/php-developer-guide.yml
@@ -208,6 +208,7 @@ pages:
               url: /extension-dev-guide/message-queues/message-queues.html
 
             - label: Message queues and stores
+              include_versions: ["2.3"]
               url: /extension-dev-guide/message-queues/message-queues-stores.html
 
             - label: Configure message Queues
