Fixed jquery-widgets-about.md 2.1 and added the PasswordStrengthIndicator widget to the main menu

--- a/_data/toc/javascript-developer-guide.yml
+++ b/_data/toc/javascript-developer-guide.yml
@@ -79,6 +79,9 @@ pages:
         - label: Navigation widget
           url: /javascript-dev-guide/widgets/widget_navigation.html
 
+        - label: PasswordStrengthIndicator widge
+          url: /javascript-dev-guide/widgets/widget_password_strength_indicator.html
+
         - label: Prompt widget
           url: /javascript-dev-guide/widgets/widget_prompt.html
 
