--- a/_data/toc/javascript-developer-guide.yml
+++ b/_data/toc/javascript-developer-guide.yml
@@ -79,7 +79,7 @@ pages:
         - label: Navigation widget
           url: /javascript-dev-guide/widgets/widget_navigation.html
 
-        - label: PasswordStrengthIndicator widge
+        - label: PasswordStrengthIndicator widget
           url: /javascript-dev-guide/widgets/widget_password_strength_indicator.html
 
         - label: Prompt widget
