--- a/_data/toc/php-developer-guide.yml
+++ b/_data/toc/php-developer-guide.yml
@@ -124,8 +124,9 @@ pages:
       children:
 
         - label: Asynchronous/deferred operations
+          include_versions: ["2.3"]
           url: /extension-dev-guide/async-operations.html
-
+          
         - label: Service contracts
           url: /extension-dev-guide/service-contracts/service-contracts.html
 
