--- a/_data/codebase/v2_3/open-source/bin-magento.yml
+++ b/_data/codebase/v2_3/open-source/bin-magento.yml
@@ -6351,7 +6351,7 @@ commands:
         accept_value: true
         is_value_required: false
         is_multiple: false
-        description: Find out what type of patch should be generated.
+        description: Find out what type of patch should be generated. Available values: `data`, `schema`.
         default: data
       help:
         name: "--help"
